--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -1,11 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Dorebazar | {% block title %}{{ section.title }}{% endblock %}</title>
+    {% block template_props %}
+        <script id="react_props" type="application/json">
+            {{ react_props|safe }}
+        </script>
+    {% endblock %}
+    {% block react_bundle %}
+        <script type="application/javascript" src="{% static view.get_bundle_path %}"></script>
+    {% endblock %}
 </head>
 <body>
 {% block  content %}
+    <div id="root"></div>
 {% endblock %}
+    {% block react_renderer %}
+        <script type="application/javascript" src="{% static "mainapp/react_renderer.js" %}"></script>
+    {% endblock %}
 </body>
 </html>
